# bake

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  MACOS_PORT.md  README.md  entitlements.plist
.github/workflows/: ci.yml
kernel_config/: microvm-kernel-ci-aarch64-6.1.config  microvm-kernel-ci-x86_64-6.1.config
src/: console.rs  embed.rs  fileshare.rs  firecracker.rs  main.rs  packet_types.rs  raw_udp.rs  socks5.rs  ssh_launcher.rs  util.rs  vm_console.rs  vminit.rs  wireguard.rs
src/hypervisor/: firecracker.rs  mod.rs  virtualization.rs
src/platform/: linux.rs  macos.rs  mod.rs
tools/: bake_debian.sh  build.sh  selfpack-macos.sh  selfpack.sh
