[package]
name = "bake"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "abort"
opt-level = "z"
lto = "thin"

[dependencies]
anyhow = "1"
bytes = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
fast-socks5 = "0.10"
faster-hex = "0.10"
libc = "0.2"
memmap2 = "0.9"
moka = { version = "0.12", features = ["sync"] }
p9 = "0.3"
rand = "0.9"
rkyv = { version = "0.8", features = ["bytes-1"] }
rkyv_derive = "0.8"
scopeguard = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-vsock = "0.7"
tun = { version = "0.8", features = ["async"] }
urlencoding = "2"
